# CFDRust

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
config/: Cargo.toml  pyproject.toml
mae5005/: Makefile  README.md  test.py
mae5005/code/1/: bailey_borwein_plouffe_formula.f90  input_and_output.f90
mae5005/code/2/: unidirectional_flow.f90  unidirectional_flow.py
mae5005/code/3/: steady_state_heat_conduction.f90  steady_state_heat_conduction.py
mae5005/code/4/: 1d_transient_laminar_flow.f90  main.py
mae5005/code/5/: 14.py  15.py  16a.py  16b.py  16c.py
mae5005/code/6/: 18.py
mae5005/docs/: Makefile  main.tex  reference.bib
mae5005/docs/config/: info.tex  preamble.tex
mae5005/docs/figure/2/: normalized_wall_viscous_stress.py
mae5005/docs/figure/3/: answer.7z
mae5005/docs/part/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex  appendix.tex
mae5005/homework/1/: bailey_borwein_plouffe_formula.f90  input_and_output.f90  input_and_output.py
src/: lib.rs  macros.rs
src/lesson/: mod.rs  x1.rs  x2.rs  x3.rs  x4.rs  x5.rs  x7.rs  x8.rs  x9.rs  xa.rs  xc.rs  xd.rs  xe.rs  xf.rs
tests/: lesson.rs
